--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8872e1">  <td>22/08/29 00:13:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySignUpTestCase.SignUp()[pri:0, instance:TestCases.VerifySignUpTestCase@3b6ddd1d]">SignUp</td> 
-  <td>main@593415583</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>22/09/03 23:50:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTestCase.Login()[pri:0, instance:TestCases.VerifyLoginTestCase@3a44431a]">Login</td> 
+  <td>main@1896622931</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>22/09/03 23:50:02</td>   <td>837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:TestCases.VerifyLoginTestCase@3a44431a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1896622931</td>   <td></td> </tr>
+<tr bgcolor="87a792">  <td>22/09/03 23:49:53</td>   <td>-8533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchbrowser()[pri:0, instance:TestCases.VerifyLoginTestCase@3a44431a]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@1896622931</td>   <td></td> </tr>
 </table>
